testing prompt  tuning

--- a/experiments/llama_quantize.ipynb
+++ b/experiments/llama_quantize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,85 +157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90/90 [00:00<00:00, 2586.31it/s]\n",
-      "100%|██████████| 155/155 [00:00<00:00, 11347.63it/s]\n"
+      "100%|██████████| 90/90 [00:00<00:00, 2403.23it/s]\n",
+      "100%|██████████| 155/155 [00:00<00:00, 59764.40it/s]\n"
      ]
     }
    ],
    "source": [
     "from hqq.models.hf.base import AutoHQQHFModel\n",
-    "llama_causal = AutoHQQHFModel.from_quantized(\"./tinyllama_hqq_4_64\")"
+    "llama_causal = AutoHQQHFModel.from_quantized(\"../artifacts/tinyllama_hqq_4_64\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f465ba5ff8fd4277a0d9db3f4a590262",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/1.29k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c1478b6ae6d4fa7a51bb39e7daceeb8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.model:   0%|          | 0.00/500k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65a735d49d97465aafd85dd3f13a14f1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/1.84M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48c8a9dd6ca746b0b7b7c7a0ad714e39",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/551 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
     "llama_tokenizer = AutoTokenizer.from_pretrained(\"TinyLlama/TinyLlama-1.1B-Chat-v1.0\")"
@@ -243,49 +186,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[  529, 29989,  1792, 29989, 29958,    13, 10994, 29892,   920,   526,\n",
-       "           366, 29973,     2, 29871,    13, 29966, 29989,   465, 22137, 29989,\n",
-       "         29958,    13, 29902, 29915, 29885,  2599,  2107, 29889,  1128,   508,\n",
-       "           306,  1371,   366,  9826, 29973,     2, 29871,    13, 29966, 29989,\n",
-       "          1792, 29989, 29958,    13, 29902, 29915, 29881,   763,   304,  1510,\n",
-       "          1283,   920, 13563,  1350,   572,  1218,  1736, 29991,     2, 29871,\n",
-       "            13]])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# . Here are some examples of valid responses.\n",
+    "#         Example 1: <user> I AM CRYING WAAAAAA!!!! I want ice cream :( <user><assistant> sad <assistant>\n",
+    "#         Example 2: <user> how could YOU BETRAY ME?!?!? <user><assistant> angry <assistant>\n",
+    "#         Example 3: <user> YAY FRIENDSHIP IS MAGIC!! <user><assistant> happy <assistant>\n",
     "input_ids = llama_tokenizer.apply_chat_template([\n",
     "    {\n",
     "        \"role\": \"system\",\n",
-    "        \"content\": \"You are now an expert on recognizing emotions in conversations. Respond to any input messages with a classification of the message from the following labels: [angry, happy, other].\",\n",
+    "        \"content\": \"\"\"You are now an expert on recognizing emotions in conversations. You understand emotions to all fall into one of the following categories: [angry, happy, sad, scared, other].\n",
+    "        \"\"\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"waaaaaa I dropped my ice cream :(((( this is the WORST DAY EVER!\",\n",
+    "        \"content\": \"Classify the following based on expert knowledge: I AM CRYING WAAAAAA!!!! I want ice cream :(\",\n",
     "    },\n",
+    "    {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": \"sad\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"Classify the following as before: how could YOU BETRAY ME?!?!?\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": \"angry\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"Classify the following as before: euphoria is filling my eeyes or something!\",\n",
+    "    }\n",
     "], return_tensors='pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<|system|>\\nYou are now an expert on recognizing emotions in conversations. Respond to any input messages with a classification of the message from the following labels: [angry, happy, other].</s> \\n<|user|>\\nwaaaaaa I dropped my ice cream :(((( this is the WORST DAY EVER!</s> \\n<|assistant|>\\nI am not able to experience emotions, but I can provide you with a response to your question.\\n\\nin this case, you dropped your ice cream, which is a common occurrence. The label \"angry\" would be appropriate for a message that describes the emotions you experienced when you dropped the ice cream. The label \"happy\" would be appropriate for a message that describes the emotions you experienced when you saw the ice cream on the ground.\\n\\nin this case, you could also use the label \"other\" to describe the emotions you experienced when you realized that you dropped your ice cream. This label would be appropriate for a message that describes the emotions you experienced when you realized that you dropped the ice cream.\\n\\nremember, emotions can be complex and subjective'"
+       "'<|system|>\\nYou are now an expert on recognizing emotions in conversations. You understand emotions to all fall into one of the following categories [angry, happy, sad, scared, other].\\n        </s> \\n<|user|>\\nClassify the following based on expert knowledge: I AM CRYING WAAAAAA!!!! I want ice cream :(</s> \\n<|assistant|>\\nsad</s> \\n<|user|>\\nClassify the following as before: how could YOU BETRAY ME?!?!?</s> \\n<|assistant|>\\nangry</s> \\n<|user|>\\nClassify the following as before: euphoria is filling my eeyes or something!</s> \\n<|assistant|>\\nhappy</s>'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
