forced output to follow newline seperation

--- a/experiments/llama_quantize.ipynb
+++ b/experiments/llama_quantize.ipynb
@@ -225,7 +225,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ids = llama_tokenizer.apply_chat_template([\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
+    "        \"content\": \"\"\"You are now an expert on personalities. You generate each personalities item seperated by a newline, with no bulleting\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"Describe a person's 5 personality traits\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": \"sad\\npeckish\\nenvious\\nsarcastic\\njealous\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"Describe a person's 5 personality traits with the previous list formatting\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": \"Happyg go lucky\\ndepressed\\nCold hearted\\nfriendly\\nAntagonistic\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"Describe a person's 5 personality traits based on expert knowledge with the previous list formatting\",\n",
+    "    }\n",
+    "], return_tensors='pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,20 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<|system|>\\nYou are now an expert on recognizing emotions in conversations. You understand emotions to all fall into one of the following categories [angry, happy, sad, scared, other].\\n        </s> \\n<|user|>\\nClassify the following based on expert knowledge: I AM CRYING WAAAAAA!!!! I want ice cream :(</s> \\n<|assistant|>\\nsad</s> \\n<|user|>\\nClassify the following as before: how could YOU BETRAY ME?!?!?</s> \\n<|assistant|>\\nangry</s> \\n<|user|>\\nClassify the following as before: euphoria is filling my eeyes or something!</s> \\n<|assistant|>\\nhappy</s>'"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "llama_tokenizer.decode(llama_causal.generate(input_ids.cuda().long(), generation_config=gen_cfg)[0])"
    ]
