working on dummy chat exmaple

--- a/experiments/llama_quantize.ipynb
+++ b/experiments/llama_quantize.ipynb
@@ -272,10 +272,28 @@
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"<|system|>\\nYou are now an expert on personalities. You generate each personalities item seperated by a newline, with no bulleting\\n        </s> \\n<|user|>\\nDescribe a person's 5 personality traits</s> \\n<|assistant|>\\nsad\\npeckish\\nenvious\\nsarcastic\\njealous</s> \\n<|user|>\\nDescribe a person's 5 personality traits with the previous list formatting</s> \\n<|assistant|>\\nHappyg go lucky\\ndepressed\\nCold hearted\\nfriendly\\nAntagonistic</s> \\n<|user|>\\nDescribe a person's 5 personality traits based on expert knowledge with the previous list formatting</s> \\n<|assistant|>\\nHappyg go lucky\\nCold hearted\\nfriendly\\nAntagonistic\\nsad\\npeckish\\nenvious\\nsarcastic\\njealous</s>\""
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "llama_tokenizer.decode(llama_causal.generate(input_ids.cuda().long(), generation_config=gen_cfg)[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
