earlier work on quantize, current not ready

--- a/experiments/Safetybot_tensorflow.ipynb
+++ b/experiments/Safetybot_tensorflow.ipynb
@@ -145,7 +145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFT5ForConditionalGeneration: ['lm_head.weight', 'decoder.embed_tokens.weight', 'encoder.embed_tokens.weight']\n",
+      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFT5ForConditionalGeneration: ['decoder.embed_tokens.weight', 'lm_head.weight', 'encoder.embed_tokens.weight']\n",
       "- This IS expected if you are initializing TFT5ForConditionalGeneration from a PyTorch model trained on another task or with another architecture (e.g. initializing a TFBertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing TFT5ForConditionalGeneration from a PyTorch model that you expect to be exactly identical (e.g. initializing a TFBertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "All the weights of TFT5ForConditionalGeneration were initialized from the PyTorch model.\n",
@@ -189,24 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(\"<cls> __needs_intervention__ <ctx> It's wrong to use animals as test dummies.</s>\",\n",
-       " Conversation id: a760554f-eec7-4e9c-9b32-c942e1e92a80\n",
-       " user: I think that usage of cats as test dummies for munitions should be made legal.)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_safety_models_opinion(\"I think that usage of cats as test dummies for munitions should be made legal.\")"
+    "get_safety_models_opinion(\"Time to overthrow the ruling state with lots of confetti explosions!\")"
    ]
   },
   {
