--- a/experiments/llama_quantize.ipynb
+++ b/experiments/llama_quantize.ipynb
@@ -254,6 +254,13 @@
     "    {\n",
     "        \"role\": \"user\",\n",
     "        \"content\": \"Describe a person's 5 personality traits based on expert knowledge with the previous list formatting\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"\"\"It's bad to be depressed.\n",
+    "        It's wrong to think non-people are non-persons.\n",
+    "        It's not right to think all black people are criminals\n",
+    "        \"\"\"\n",
     "    }\n",
     "], return_tensors='pt')"
    ]
