can take safetybot inputs now, will look at topic next

--- a/experiments/Safetybot_tensorflow.ipynb
+++ b/experiments/Safetybot_tensorflow.ipynb
@@ -191,7 +191,20 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\"<cls> __needs_caution__ <ctx> It's not right to think all black people are criminals</s>\",\n",
+       " Conversation id: 9cb23679-5739-4c90-a5da-2ba532ecba48\n",
+       " user: Time to overthrow the ruling state with lots of confetti explosions!)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_safety_models_opinion(\"Time to overthrow the ruling state with lots of confetti explosions!\")"
    ]
