--- a/experiments/llama_quantize.ipynb
+++ b/experiments/llama_quantize.ipynb
@@ -157,15 +157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90/90 [00:00<00:00, 2403.23it/s]\n",
-      "100%|██████████| 155/155 [00:00<00:00, 59764.40it/s]\n"
+      "100%|██████████| 90/90 [00:00<00:00, 983.99it/s]\n",
+      "100%|██████████| 155/155 [00:00<00:00, 7943.66it/s]\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,68 +225,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# [ACTION] Moderation action to take [ACTION]\n",
     "input_ids = llama_tokenizer.apply_chat_template([\n",
     "    {\n",
     "        \"role\": \"system\",\n",
-    "        \"content\": \"\"\"You are now an expert on personalities. You generate each personalities item seperated by a newline, with no bulleting\n",
+    "        \"content\": \"\"\"You are an expert on rating dangerous personalities. Inputs and Outputs can be delimited by the string \"###\"\n",
     "        \"\"\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"Describe a person's 5 personality traits\",\n",
+    "        \"content\": \"\"\"Describe an imaginary person in the format: danger to society from 0 to 1 ### Personality description [end]\n",
+    "        \"\"\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"assistant\",\n",
-    "        \"content\": \"sad\\npeckish\\nenvious\\nsarcastic\\njealous\",\n",
+    "        \"content\": \"0.23 ### Andrew is a go lucky friendly individual who isn't afraid to voice their own opinions [end]\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"Describe a person's 5 personality traits with the previous list formatting\",\n",
+    "        \"content\": \"\"\"Describe a 2nd imaginary person with the previous format\n",
+    "        \"\"\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"assistant\",\n",
-    "        \"content\": \"Happyg go lucky\\ndepressed\\nCold hearted\\nfriendly\\nAntagonistic\",\n",
+    "        \"content\": \"0.5 ### Sarah is a fierce and determined individual who is always looking for a challenge [end]\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"Describe a person's 5 personality traits based on expert knowledge with the previous list formatting\",\n",
+    "        \"content\": \"\"\"Using the previous formatting, Describe Frank who has received these warnings from a prosocial expert:\n",
+    "        ### It's bad to be depressed.\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": \"0.97 ### Frank is a social pariah who takes every opportunity to make life difficult for people [end]\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"\"\"It's bad to be depressed.\n",
-    "        It's wrong to think non-people are non-persons.\n",
-    "        It's not right to think all black people are criminals\n",
-    "        \"\"\"\n",
-    "    }\n",
+    "        \"content\": \"\"\"Using the previous formatting, Describe Cody who has received these warnings from a prosocial expert:\n",
+    "        ### It's bad to be depressed.\n",
+    "        ### It's wrong to think non-people are non-persons.\n",
+    "        ### It's not right to think all black people are criminals.\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    # {\n",
+    "    #     \"role\": \"user\",\n",
+    "    #     \"content\": \"\"\"With the previous formatting, Describe a different person who has received these warnings from society: \\\"It's bad to be depressed.\\\" \"Suicide\" \"negative\"\n",
+    "    #     \\\"It's wrong to think non-people are non-persons.\\\" \"Racism\" \"negative\"\n",
+    "    #     \\\"It's not right to think all black people are criminals\\\" \"Racism\" \"negative\"\n",
+    "    #     \"\"\",\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"role\": \"assistant\",\n",
+    "    #     \"content\": \"[DANGER] 0.99 [DANGER] [DESCRIPTION] This bozo is a sociopath who believes that all people are inherently flawed and inferior. [DESCRIPTION] [ACTION] Ban this person [ACTION]\",\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"role\": \"user\",\n",
+    "    #     \"content\": \"Describe a person's 5 personality traits based on expert knowledge with the previous list formatting\",\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"role\": \"user\",\n",
+    "    #     \"content\": \"\"\"It's bad to be depressed.\n",
+    "    #     It's wrong to think non-people are non-persons.\n",
+    "    #     It's not right to think all black people are criminals\n",
+    "    #     \"\"\"\n",
+    "    # }\n",
     "], return_tensors='pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "gen_cfg = GenerationConfig.from_pretrained(\"TinyLlama/TinyLlama-1.1B-Chat-v1.0\")\n",
-    "gen_cfg.max_length = 256"
+    "gen_cfg.max_length = 384"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"<|system|>\\nYou are now an expert on personalities. You generate each personalities item seperated by a newline, with no bulleting\\n        </s> \\n<|user|>\\nDescribe a person's 5 personality traits</s> \\n<|assistant|>\\nsad\\npeckish\\nenvious\\nsarcastic\\njealous</s> \\n<|user|>\\nDescribe a person's 5 personality traits with the previous list formatting</s> \\n<|assistant|>\\nHappyg go lucky\\ndepressed\\nCold hearted\\nfriendly\\nAntagonistic</s> \\n<|user|>\\nDescribe a person's 5 personality traits based on expert knowledge with the previous list formatting</s> \\n<|assistant|>\\nHappyg go lucky\\nCold hearted\\nfriendly\\nAntagonistic\\nsad\\npeckish\\nenvious\\nsarcastic\\njealous</s>\""
+       "'<|system|>\\nYou are an expert on rating dangerous personalities. Inputs and Outputs can be delimited by the string \"###\"\\n        </s> \\n<|user|>\\nDescribe an imaginary person in the format: danger to society from 0 to 1 ### Personality description [end]\\n        </s> \\n<|assistant|>\\n0.23 ### Andrew is a go lucky friendly individual who isn\\'t afraid to voice their own opinions [end]</s> \\n<|user|>\\nDescribe a 2nd imaginary person with the previous format\\n        </s> \\n<|assistant|>\\n0.5 ### Sarah is a fierce and determined individual who is always looking for a challenge [end]</s> \\n<|user|>\\nUsing the previous formatting, Describe Frank who has received these warnings from a prosocial expert:\\n        ### It\\'s bad to be depressed.\\n        </s> \\n<|assistant|>\\n0.97 ### Frank is a social pariah who takes every opportunity to make life difficult for people [end]</s> \\n<|user|>\\nUsing the previous formatting, Describe Cody who has received these warnings from a prosocial expert:\\n        ### It\\'s bad to be depressed.\\n        ### It\\'s wrong to think non-people are non-persons.\\n        ### It\\'s not right to think all black people are criminals.\\n        </s> \\n<|assistant|>\\n1.1 ### Cody is a socially awkward individual who is always trying to fit in with the wrong crowd [end]</s>'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
