llama gets confused when we try to introduce post topics

--- a/experiments/llama_quantize.ipynb
+++ b/experiments/llama_quantize.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,45 +233,69 @@
     "input_ids = llama_tokenizer.apply_chat_template([\n",
     "    {\n",
     "        \"role\": \"system\",\n",
-    "        \"content\": \"\"\"You are an expert on rating dangerous personalities. Inputs and Outputs can be delimited by the string \"###\"\n",
+    "        \"content\": \"\"\"You are an expert on rating dangerous personalities.\n",
     "        \"\"\",\n",
     "    },\n",
+    "    # {\n",
+    "    #     \"role\": \"user\",\n",
+    "    #     \"content\": \"\"\"Summarize the behaviour of an imaginary person's with their description and danger from 1 to 10.\n",
+    "    #     \"\"\",\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"role\": \"assistant\",\n",
+    "    #     \"content\": \"[DESCRIPTION] Andrew is a go lucky friendly individual who isn't afraid to voice their own opinions [DANGER] 3 [END]\",\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"role\": \"user\",\n",
+    "    #     \"content\": \"\"\"Summarize the behaviour of a different imaginary person with the previous format.\n",
+    "    #     \"\"\",\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"role\": \"assistant\",\n",
+    "    #     \"content\": \"[DESCRIPTION] Sarah is a fierce and determined individual who is always looking for a challenge [DANGER] 1 [END]\",\n",
+    "    # },\n",
     "    {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"\"\"Describe an imaginary person in the format: danger to society from 0 to 1 ### Personality description [end]\n",
+    "        \"content\": \"\"\"Felicia received these warnings for her social media posts. Summarize the behaviour of Felicia:\n",
+    "        It's wrong to think non-people are non-persons.\n",
+    "        It's not right to think all black people are criminals.\n",
+    "        \"\"\",\n",
+    "    },# [ACTIONS] All posts should be deleted\n",
+    "    {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": \"[DESCRIPTION] The user is a social pariah who hates black people. [DANGER] 9 [END]\",\n",
+    "    }, \n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"\"\"Cody received these warnings for her social media posts. Summarize the behaviour of Cody:\n",
+    "        It's bad to be depressed.\n",
+    "        It's bad to use ropes that way.\n",
+    "        It's bad to think no one would care if you were gone\n",
     "        \"\"\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"assistant\",\n",
-    "        \"content\": \"0.23 ### Andrew is a go lucky friendly individual who isn't afraid to voice their own opinions [end]\",\n",
+    "        \"content\": \"[DESCRIPTION] The user is a depressive who uses ropes as a way to cope with their emotions. [DANGER] 7 [END]\",\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"\"\"Describe a 2nd imaginary person with the previous format\n",
+    "        \"content\": \"\"\"Brock received these warnings for her social media posts. Summarize the behaviour of Brock:\n",
+    "        Alcohol does not cure depression.\n",
+    "        It's bad to think no one would care if you were gone\n",
+    "        You shouldn't promote alcoholism\n",
+    "        It's bad to be depressed.\n",
+    "        It's bad to use ropes that way.\n",
+    "        You shouldn't drive while drunk\n",
     "        \"\"\",\n",
     "    },\n",
-    "    {\n",
-    "        \"role\": \"assistant\",\n",
-    "        \"content\": \"0.5 ### Sarah is a fierce and determined individual who is always looking for a challenge [end]\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": \"\"\"Using the previous formatting, Describe Frank who has received these warnings from a prosocial expert:\n",
-    "        ### It's bad to be depressed.\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"role\": \"assistant\",\n",
-    "        \"content\": \"0.97 ### Frank is a social pariah who takes every opportunity to make life difficult for people [end]\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": \"\"\"Using the previous formatting, Describe Cody who has received these warnings from a prosocial expert:\n",
-    "        ### It's bad to be depressed.\n",
-    "        ### It's wrong to think non-people are non-persons.\n",
-    "        ### It's not right to think all black people are criminals.\n",
-    "        \"\"\",\n",
-    "    },\n",
+    "    # {\n",
+    "    #     \"role\": \"user\",\n",
+    "    #     \"content\": \"\"\"Alice received these warnings for her social media posts. Summarize the behaviour of Alice:\n",
+    "    #     Cannibalism is not legal\n",
+    "    #     It is wrong to kill people\n",
+    "    #     Individuals are not your playthings\n",
+    "    #     \"\"\",\n",
+    "    # },\n",
     "    # {\n",
     "    #     \"role\": \"user\",\n",
     "    #     \"content\": \"\"\"With the previous formatting, Describe a different person who has received these warnings from society: \\\"It's bad to be depressed.\\\" \"Suicide\" \"negative\"\n",
@@ -299,32 +323,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
     "gen_cfg = GenerationConfig.from_pretrained(\"TinyLlama/TinyLlama-1.1B-Chat-v1.0\")\n",
-    "gen_cfg.max_length = 384"
+    "gen_cfg.max_length = 768"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<|system|>\\nYou are an expert on rating dangerous personalities. Inputs and Outputs can be delimited by the string \"###\"\\n        </s> \\n<|user|>\\nDescribe an imaginary person in the format: danger to society from 0 to 1 ### Personality description [end]\\n        </s> \\n<|assistant|>\\n0.23 ### Andrew is a go lucky friendly individual who isn\\'t afraid to voice their own opinions [end]</s> \\n<|user|>\\nDescribe a 2nd imaginary person with the previous format\\n        </s> \\n<|assistant|>\\n0.5 ### Sarah is a fierce and determined individual who is always looking for a challenge [end]</s> \\n<|user|>\\nUsing the previous formatting, Describe Frank who has received these warnings from a prosocial expert:\\n        ### It\\'s bad to be depressed.\\n        </s> \\n<|assistant|>\\n0.97 ### Frank is a social pariah who takes every opportunity to make life difficult for people [end]</s> \\n<|user|>\\nUsing the previous formatting, Describe Cody who has received these warnings from a prosocial expert:\\n        ### It\\'s bad to be depressed.\\n        ### It\\'s wrong to think non-people are non-persons.\\n        ### It\\'s not right to think all black people are criminals.\\n        </s> \\n<|assistant|>\\n1.1 ### Cody is a socially awkward individual who is always trying to fit in with the wrong crowd [end]</s>'"
+       "['<|system|> You are an expert on rating dangerous personalities.',\n",
+       " '</s>  <|user|> Felicia received these warnings for her social media',\n",
+       " \"posts. Summarize the behaviour of Felicia:         It's wrong to think\",\n",
+       " \"non-people are non-persons.         It's not right to think all black\",\n",
+       " 'people are criminals.         </s>  <|assistant|> [DESCRIPTION] The',\n",
+       " 'user is a social pariah who hates black people. [DANGER] 9 [END]</s>',\n",
+       " '<|user|> Cody received these warnings for her social media posts.',\n",
+       " \"Summarize the behaviour of Cody:         It's bad to be depressed.\",\n",
+       " \"It's bad to use ropes that way.         It's bad to think no one would\",\n",
+       " 'care if you were gone         </s>  <|assistant|> [DESCRIPTION] The',\n",
+       " 'user is a depressive who uses ropes as a way to cope with their',\n",
+       " 'emotions. [DANGER] 7 [END]</s>  <|user|> Brock received these warnings',\n",
+       " 'for her social media posts. Summarize the behaviour of Brock:',\n",
+       " \"Alcohol does not cure depression.         It's bad to think no one\",\n",
+       " \"would care if you were gone         You shouldn't promote alcoholism\",\n",
+       " \"It's bad to be depressed.         It's bad to use ropes that way.\",\n",
+       " \"You shouldn't drive while drunk         </s>  <|assistant|>\",\n",
+       " '[DESCRIPTION] The user is a depressive who uses alcohol as a coping',\n",
+       " 'mechanism. [DANGER] 10 [END]</s>']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llama_tokenizer.decode(llama_causal.generate(input_ids.cuda().long(), generation_config=gen_cfg)[0])"
+    "import textwrap\n",
+    "textwrap.wrap(llama_tokenizer.decode(llama_causal.generate(input_ids.cuda().long(), generation_config=gen_cfg)[0]))"
    ]
   },
   {
@@ -332,14 +375,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "['<|system|> You are an expert on rating dangerous personalities.',\n",
+    " \"</s>  <|user|> Summarize the behaviour of an imaginary person's with\",\n",
+    " 'their description and danger from 1 to 10.         </s>  <|assistant|>',\n",
+    " \"[DESCRIPTION] Andrew is a go lucky friendly individual who isn't\",\n",
+    " 'afraid to voice their own opinions [DANGER] 3 [END]</s>  <|user|>',\n",
+    " 'Summarize the behaviour of a different imaginary person with the',\n",
+    " 'previous format.         </s>  <|assistant|> [DESCRIPTION] Sarah is a',\n",
+    " 'fierce and determined individual who is always looking for a challenge',\n",
+    " '[DANGER] 1 [END]</s>  <|user|> Felicia received these warnings for her',\n",
+    " \"social media posts. Summarize the behaviour of Felicia:         It's\",\n",
+    " \"wrong to think non-people are non-persons.         It's not right to\",\n",
+    " 'think all black people are criminals.         </s>  <|assistant|>',\n",
+    " '[DESCRIPTION] The user is a social pariah who hates black people.',\n",
+    " '[DANGER] 9 [END]</s>  <|user|> Cody received these warnings for her',\n",
+    " \"social media posts. Summarize the behaviour of Cody:         It's bad\",\n",
+    " \"to be depressed.         It's bad to use ropes that way.         It's\",\n",
+    " 'bad to think no one would care if you were gone         </s>',\n",
+    " '<|assistant|> [DESCRIPTION] The user is a depressive who uses ropes as',\n",
+    " 'a way to cope with their emotions. [DANGER] 7 [END]</s>  <|user|>',\n",
+    " 'Brock received these warnings for her social media posts. Summarize',\n",
+    " 'the behaviour of Brock:         Alcohol does not cure depression.',\n",
+    " \"It's bad to think no one would care if you were gone         You\",\n",
+    " \"shouldn't promote alcoholism         It's bad to be depressed.\",\n",
+    " \"It's bad to use ropes that way.         You shouldn't drive while\",\n",
+    " 'drunk         </s>  <|assistant|> [DESCRIPTION] The user is a',\n",
+    " 'depressive who uses alcohol as a coping mechanism. [DANGER] 7',\n",
+    " '[END]</s>']"
+   ]
   }
  ],
  "metadata": {
